force-app/main/default/objects/Contact_Inquiry__c/Contact_Inquiry__c.object-meta.xml
<CustomObject>
    <label>Contact Inquiry</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Contact Inquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Inquiries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>