force-app/main/default/objects/Contact_Inquiry__c/fields/Contact_Location_For_Sales__c.field-meta.xml
<CustomField>
    <fullName>Contact_Location_For_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Location For Sales</label>
    <type>Checkbox</type>
</CustomField>