force-app/main/default/objects/Contact_Inquiry__c/fields/Do_you_have_Existing_Bookig__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_Existing_Bookig__c</fullName>
    <label>Do you have an existing booking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>