force-app/main/default/objects/Contact_Inquiry__c/fields/Formstack_Location__c.field-meta.xml
<CustomField>
    <fullName>Formstack_Location__c</fullName>
    <label>Formstack Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Formstack_Locations</valueSetName>
    </valueSet>
</CustomField>