force-app/main/default/objects/Contact_Inquiry__c/fields/Is_Contact_Rentals__c.field-meta.xml
<CustomField>
    <fullName>Is_Contact_Rentals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Contact Rentals?</label>
    <type>Checkbox</type>
</CustomField>