force-app/main/default/objects/Contact_Inquiry__c/fields/Is_From_Formstack__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Formstack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From Formstack?</label>
    <type>Checkbox</type>
</CustomField>