force-app/main/default/objects/Contact_Inquiry__c/fields/Is_From_Parts_and_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Parts_and_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From Parts and Service</label>
    <type>Checkbox</type>
</CustomField>