force-app/main/default/objects/Contact_Inquiry__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abbotsford Fraserway</fullName>
                <label>Abbotsford</label>
            </value>
            <value>
                <fullName>Abbotsford Travelhome</fullName>
            </value>
            <value>
                <fullName>Airdrie</fullName>
            </value>
            <value>
                <fullName>Edmonton</fullName>
            </value>
            <value>
                <fullName>Kamloops</fullName>
            </value>
            <value>
                <fullName>Kelowna</fullName>
            </value>
            <value>
                <fullName>Lacombe</fullName>
            </value>
            <value>
                <fullName>Leduc</fullName>
            </value>
            <value>
                <fullName>Prince George</fullName>
            </value>
            <value>
                <fullName>Red Deer</fullName>
            </value>
            <value>
                <fullName>Whitehorse</fullName>
            </value>
            <value>
                <fullName>Halifax</fullName>
            </value>
            <value>
                <fullName>Vancouver</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
            <value>
                <fullName>Calgary</fullName>
                <isActive>false</isActive>
                <label>Calgary</label>
            </value>
            <value>
                <fullName>Cookstown</fullName>
                <isActive>false</isActive>
                <label>Toronto</label>
            </value>
            <value>
                <fullName>Delta</fullName>
                <isActive>false</isActive>
                <label>Vancouver</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>