force-app/main/default/objects/Contact_Inquiry__c/fields/Preferred_Time_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_of_Day__c</fullName>
    <label>Preferred Time of Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>