force-app/main/default/objects/Contact_Inquiry__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Existing Booking</fullName>
            </value>
            <value>
                <fullName>OnRoad Support</fullName>
            </value>
            <value>
                <fullName>Shuttle Service</fullName>
            </value>
            <value>
                <fullName>Appointment request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>