force-app/main/default/objects/Contact_Inquiry__c/fields/Type_of_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Appointment__c</fullName>
    <label>Type of Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>General Repairs</fullName>
            </value>
            <value>
                <fullName>Paint &amp; Body (Abbotsford only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>