force-app/main/default/objects/Contact_Inquiry__c/fields/Your_BookingQuote_Number__c.field-meta.xml
<CustomField>
    <fullName>Your_BookingQuote_Number__c</fullName>
    <label>Your Booking/Quote Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>