force-app/main/default/objects/Contact_Inquiry__c/fields/Your_Comments__c.field-meta.xml
<CustomField>
    <fullName>Your_Comments__c</fullName>
    <label>Your Comments</label>
    <type>TextArea</type>
</CustomField>